//package com.koala.data.cfg;

message CFG_NAME
{
	repeated string fam_name = 1;
	repeated string male_name = 2;
	repeated string female_name = 3;
}
